# mongoengine-exercise

./: README.md  main.py  pymongod.py  pyproject.toml
tests/: test_mongoengine_tutorial.py
