[tool.poetry]
name = "mongoengine-tutorial"
version = "0.1.0"
description = ""
authors = ["jamie.mei <meitzuen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mongoengine = "^0.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
